--- a/src/app/home/banner/banner.component.html
+++ b/src/app/home/banner/banner.component.html
@@ -1,1 +1,6 @@
-<p>banner works!</p>
+<div class="mb-2 mt-2 me-2 bg-dark">
+    <div>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque incidunt quis, quod ex possimus, voluptates vel velit atque quaerat praesentium sunt corrupti illum animi ipsa? Eaque earum in consectetur error?</p>
+        <img src="" />
+    </div>
+</div>
