--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<div class="row">
+    <div class="col-2">
+        <app-banner></app-banner>
+    </div>
+    <div class="col">
+        <app-dashboard></app-dashboard>
+    </div>
+</div>
