--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="row">
-    <div class="col-2">
-        <app-banner></app-banner>
+    <div class="col-4">
+        <app-banner [offer]="offerDetails"></app-banner>
     </div>
     <div class="col">
         <app-dashboard></app-dashboard>
